tests/typing/fail/too_polymorphic2.t20
;; The type signature is too general.
(: f (-> 'a 'a))
(define (f [x : Int]) x)